--- a/bingoGenerator/bingo.css
+++ b/bingoGenerator/bingo.css
@@ -7,16 +7,30 @@ body {
   align-items: center;
 }
 
+body:hover {
+  cursor: pointer;
+}
+
 #content {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  width: 400px;
+  width: 600px;
 }
 
+#all {
+  margin-top: 40px;
+  height: 400px;
+  width: 600px;
+
+}
+#numbers {
+  display: flex;
+  flex-wrap: wrap;
+}
 
 h1 {
-  font-family: 'Roboto', sans-serif; font-size: 80pt;
+  font-family: 'Roboto', sans-serif; font-size: 130pt;
   font-weight: 600;
   margin: 0 auto;
   padding: 30px;
@@ -32,7 +46,13 @@ h1 {
   font-size: 14px;
   font-weight: 700;
   cursor: pointer;
-  width: 100%;
+  width: 300px;
+  margin-left: 150px;
+  border-radius: 15px;
+}
+
+.btn:hover {
+  background-color: #2980b9;
 }
 
 #numbers {
@@ -42,3 +62,24 @@ h1 {
   margin: 0 auto;
   color: white;
 }
+
+#drawn {
+  position: fixed;
+  top: 0;
+  right: 0;
+
+  padding-top: 14px;
+  font-family: 'Roboto', sans-serif; font-size: 24pt;
+  color: white;
+}
+
+.nr-span {
+  background-color: #6c5ce7;
+  border-radius: 5px;
+  padding: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
+
+  margin: 5px;
+}
+
